<resources>
    <string name="app_name">AD News</string>
    <string name="api_key">534a091354c14911aa44a800e5270924</string>
    <string name="article_title">Title</string>
    <string name="article_description">Short description of article Short description of article Short description of article Short description of article Short description of article Short description of article Short description of article</string>
    <string name="label_preference">Introduceti categoriile preferate de stiri</string>
    <string name="label_button_delete_preferences">Stergeti\n preferinte</string>
    <string name="hint_introduce_a_preference">Introduceti o preferinta</string>
    <string name="label_button_save_preferences">Salveaza\n preferinte</string>
    <string name="label_introduced_preferences">Preferinte introduse:</string>
    <string name="label_button_chose_a_date">Alegeti o data</string>
    <string name="label_chose_a_date">Alegeti o data:</string>
    <string name="label_sorted_by">Sortate dupa:</string>
    <string name="hint_introduce_a_subject_for_searching">Introduceti un subiect de cautare</string>
    <string name="label_search_again">Cautati din nou</string>
    <string name="label_start_search">Incepeti cautarea</string>
</resources>
