<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search.SearchActivity"
    android:padding="8dp">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/search_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="edit_text_input,label_choose_a_date,button_date_picker,label_choose_a_sorting_pattern,spinner_sort_by,button_start_searching"/>

    <EditText
        android:id="@+id/edit_text_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/hint_introduce_a_subject_for_searching"
        android:paddingStart="16dp"/>

    <TextView
        android:id="@+id/label_choose_a_date"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/label_chose_a_date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/button_date_picker"
        app:layout_constraintBottom_toBottomOf="@id/button_date_picker"
        app:layout_constraintRight_toLeftOf="@id/button_date_picker"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"/>

    <Button
        android:id="@+id/button_date_picker"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        app:layout_constraintLeft_toRightOf="@id/label_choose_a_date"
        app:layout_constraintTop_toBottomOf="@id/edit_text_input"
        android:background="@drawable/ripple_button"
        android:text="AAAA-ZZ-LL"
        android:onClick="displayDatePickerOnClick"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" />

    <TextView
        android:id="@+id/label_choose_a_sorting_pattern"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/label_sorted_by"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/spinner_sort_by"
        app:layout_constraintBottom_toBottomOf="@id/spinner_sort_by"
        app:layout_constraintRight_toLeftOf="@id/spinner_sort_by"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"/>

    <Spinner
        android:id="@+id/spinner_sort_by"
        android:layout_width="0dp"
        android:layout_height="30dp"
        app:layout_constraintLeft_toRightOf="@id/label_choose_a_sorting_pattern"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_date_picker"
        android:layout_marginStart="16dp"
        android:background="@drawable/ripple_button"
        android:layout_margin="8dp"/>

    <DatePicker
        android:id="@+id/date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/button_start_searching"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="8dp"
        android:textSize="15sp"
        android:layout_marginTop="48dp"
        android:background="@drawable/ripple_button"
        android:onClick="startSearchingOnClick"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/label_start_search"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_choose_a_sorting_pattern" />

    <Button
        android:id="@+id/button_search_again"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/ripple_button"
        android:text="@string/label_search_again"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:visibility="invisible"
        android:onClick="startSearchAgain"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/button_start_searching"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"
        tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>